# DataScience-Project

./: .gitignore  Dockerfile  README.md  connect_to_model.py  docker-compose.yml  pyproject.toml  requirements.txt  vgg16_cifar-10_transfer.ipynb
AI_API/AI_API/: settings.py  urls.py
AI_API/ml_model/: form.py  models.py  urls.py  views.py
AI_API/ml_model/migrations/: 0001_initial.py
AI_API/ml_model/model/: model.py
AI_API/ml_model/static/css/: styles.css
AI_API/ml_model/templates/: about.html  about_model.html  base.html  index.html  results.html
